remove chronicle-core