@@ -32,17 +32,5 @@ subprojects {
     threads.set(32)
     failOnError.set(true)
     jmhVersion.set("1.36")
-    // Chronicle-Core needs special JVM args
-    // see: https://chronicle.software/chronicle-support-java-17
-    jvmArgsAppend.set(listOf(
-        "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
-        "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
-        "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-        "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-opens=java.base/java.io=ALL-UNNAMED",
-        "--add-opens=java.base/java.util=ALL-UNNAMED"))
   }
 }
